# REST-API-for-Users-and-Auth-using-Axum

Downloads/jobs/Fantacode/Login-Dashboard-Mini-Project/LoginDashboardProject/: README.md  start-backend.sh  start-frontend.sh
Downloads/jobs/Fantacode/Login-Dashboard-Mini-Project/LoginDashboardProject/backend/: LoginDashboardAPI.csproj  Program.cs  appsettings.json
Downloads/jobs/Fantacode/Login-Dashboard-Mini-Project/LoginDashboardProject/frontend/: angular.json  package-lock.json  package.json  tsconfig.json
Downloads/jobs/Fantacode/mini-project-workspace/: README.md
Downloads/jobs/Fantacode/mini-project-workspace/backend/: README.md
Downloads/jobs/Fantacode/mini-project-workspace/backend/MiniProject.Api/: MiniProject.Api.csproj  Program.cs  Startup.cs
Downloads/jobs/Fantacode/mini-project-workspace/frontend/: README.md  angular.json  package-lock.json  package.json
Downloads/rust/REST-API-for-Users-and-Auth-using-Axum/: README.md  docker-compose.yml
Downloads/rust/REST-API-for-Users-and-Auth-using-Axum/backend/: .env  Cargo.toml
Downloads/rust/REST-API-for-Users-and-Auth-using-Axum/backend/migrations/: 20231129000000_create_users_table.sql
Downloads/rust/REST-API-for-Users-and-Auth-using-Axum/backend/src/: auth.rs  config.rs  db.rs  handlers.rs  main.rs  models.rs
Downloads/rust/REST-API-for-Users-and-Auth-using-Axum/frontend/: package-lock.json
Downloads/rust/REST-API-for-Users-and-Auth-using-Axum/frontend/src/: App.tsx  index.css
Downloads/rust/REST-API-for-Users-and-Auth-using-Axum/frontend/src/api/: axios.ts
(+50 files in other folders)
